fix plain lookup on mobile

--- a/src/content/inject.less
+++ b/src/content/inject.less
@@ -25,6 +25,7 @@
     .fairydict-w {
       font-size: 16px;
       margin-bottom: 4px;
+      color: #f5f5f5;
     }
 
     .fairydict-labels {
